# huling-guard

./: .dockerignore  .gitignore  Dockerfile.runtime  README.md  docker-compose.runtime.yml  pyproject.toml
configs/: runtime_room.yaml  sample_room_prior.json  train_scene_pose.yaml
docs/: 1.0发布检查清单.md  architecture.md  云端资源封存清单.md  开源对标与方向校验.md  模型与实验说明.md  状态定义手册.md  部署与应用系统复盘.md  项目设计说明.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
requirements/: runtime-docker.txt
scripts/: assess_experiment_promotion.py  build_archive_review_queue.py  build_hard_case_review_queue.py  build_sample_review_queue.py  build_transition_interval_labels.py  build_video_batch_manifest.py  check_experiment_round_complete.py  check_pose_manifest_coverage.py  check_public_plus_ur_ready.py  check_refined_experiment_ready.py  compare_checkpoint_evaluations.py  compare_expected_state_manifests.py  compare_experiment_results.py  evaluate_checkpoint_on_manifest.py  evaluate_sample_classification.py  experiment_artifacts.py  export_interval_labels.py  finalize_parallel_pose_extraction.py  finalize_public_corpus_training.py  finalize_ur_fall_corpus.py  materialize_runtime_archive.py  merge_interval_labels.py  mine_hard_cases.py  package_runtime_release.py  prepare_ur_fall_corpus.py  replay_pose_archives_to_runtime.py  run_archive_normal_refinement.py  run_parallel_pose_extraction.py  run_public_corpus_training.py  run_public_plus_ur_experiment.py  run_public_plus_ur_refined_experiment.py  run_public_plus_ur_refined_training.py  run_public_plus_ur_training.py  (+5 more)
(+118 files in other folders)
